--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "tsx watch src/server.ts",
+    "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@rocketseat/eslint-config": "^1.2.0",
     "@types/node": "^18.14.6",
+    "eslint": "^8.35.0",
     "tsx": "^3.12.3",
     "typescript": "^4.9.5"
   },
