--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
-    "fastify": "^4.14.1"
+    "fastify": "^4.14.1",
+    "zod": "^3.21.4"
   }
 }
