this commit will add tests

--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
@@ -16,7 +18,8 @@
     "@types/node": "^18.14.6",
     "eslint": "^8.35.0",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "vitest": "^0.29.2"
   },
   "dependencies": {
     "fastify": "^4.14.1",
