--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "test": "vitest run",
-    "test:watch": "vitest",
+    "test": "jest",
+    "test:watch": "jest --watch",
     "lint": "eslint src --ext .ts --fix"
   },
   "keywords": [],
@@ -15,11 +15,16 @@
   "license": "ISC",
   "devDependencies": {
     "@rocketseat/eslint-config": "^1.2.0",
+    "@types/jest": "^29.4.0",
     "@types/node": "^18.14.6",
+    "@types/supertest": "^2.0.12",
     "eslint": "^8.35.0",
+    "jest": "^29.5.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
     "tsx": "^3.12.3",
-    "typescript": "^4.9.5",
-    "vitest": "^0.29.2"
+    "typescript": "^4.9.5"
   },
   "dependencies": {
     "fastify": "^4.14.1",
